update dependencies, bump version

--- a/pom.xml
+++ b/pom.xml
@@ -28,16 +28,15 @@ THE SOFTWARE.
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
     <!-- Baseline Jenkins version you use to build and test the plugin. Users must have this version or newer to run. -->
-    <version>1.580.1</version>
+    <version>4.47</version>
     <relativePath />
   </parent>
   <groupId>org.jenkins-ci.plugins</groupId>
   <artifactId>wildfly-deployer</artifactId>
-  <version>1.0.3-SNAPSHOT</version>
+  <version>1.0.4-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
   <name>WildFly Deployer Plugin</name>
-  <description>WildFly Deployer Plugin</description>
   <url>https://wiki.jenkins-ci.org/display/JENKINS/WildFly+Deployer+Plugin</url>
   <licenses>
     <license>
@@ -45,14 +44,14 @@ THE SOFTWARE.
       <url>http://opensource.org/licenses/MIT</url>
     </license>
   </licenses>
-  
+
   <properties>
     <log4j-artifact>log4j-over-slf4j</log4j-artifact>
-    <log4j-version>1.7.7</log4j-version>
+    <log4j-version>1.7.26</log4j-version>
     <wildfly-cli-artifact>wildfly-cli</wildfly-cli-artifact>
-    <wildfly-cli-version>8.2.1.Final</wildfly-cli-version>
+    <wildfly-cli-version>18.1.2.Final</wildfly-cli-version>
   </properties>
-  
+
   <developers>
     <developer>
       <id>dandillingham</id>
@@ -66,12 +65,12 @@ THE SOFTWARE.
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>http://github.com/jenkinsci/${project.artifactId}-plugin</url>
     <tag>HEAD</tag>
-  </scm> 
-   
+  </scm>
+
   <repositories>
     <repository>
       <id>repo.jenkins-ci.org</id>
-      <url>http://repo.jenkins-ci.org/public/</url>
+      <url>https://repo.jenkins-ci.org/releases/</url>
     </repository>
   </repositories>
   <pluginRepositories>
@@ -81,36 +80,36 @@ THE SOFTWARE.
     </pluginRepository>
   </pluginRepositories>
   <dependencies>
-    <dependency>  
-      <groupId>org.wildfly</groupId>  
-      <artifactId>${wildfly-cli-artifact}</artifactId> 
-      <version>${wildfly-cli-version}</version>  
-      <classifier>client</classifier>
-      <exclusions>  
-        <exclusion>  
-          <artifactId>*</artifactId>  
-          <groupId>*</groupId>  
-        </exclusion>  
-      </exclusions>        
-    </dependency>   
     <dependency>
-	  <groupId>org.slf4j</groupId>
-	  <artifactId>${log4j-artifact}</artifactId>
-	  <version>${log4j-version}</version>
-    </dependency>    
-  </dependencies>  
-   <build>
-    <plugins>         
+      <groupId>org.wildfly.core</groupId>
+      <artifactId>${wildfly-cli-artifact}</artifactId>
+      <version>${wildfly-cli-version}</version>
+      <classifier>client</classifier>
+      <exclusions>
+        <exclusion>
+          <artifactId>*</artifactId>
+          <groupId>*</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>${log4j-artifact}</artifactId>
+      <version>${log4j-version}</version>
+    </dependency>
+  </dependencies>
+  <build>
+    <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>1.4.0</version>
+        <version>3.1.0</version>
         <executions>
           <execution>
             <id>cp</id>
             <goals>
               <goal>exec</goal>
-            </goals>    
+            </goals>
             <configuration>
               <executable>cp</executable>
               <workingDirectory>${project.basedir}</workingDirectory>
@@ -119,13 +118,13 @@ THE SOFTWARE.
                 <argument>${project.build.directory}/${project.artifactId}/WEB-INF/lib/${wildfly-cli-artifact}-${wildfly-cli-version}.jar</argument>
                 <argument>${project.build.directory}/work/webapp/WEB-INF/lib</argument>
               </arguments>
-            </configuration>                                               
+            </configuration>
           </execution>
-         <execution>
+          <execution>
             <id>rm</id>
             <goals>
               <goal>exec</goal>
-            </goals>    
+            </goals>
             <configuration>
               <executable>bash</executable>
               <workingDirectory>${project.basedir}</workingDirectory>
@@ -133,9 +132,9 @@ THE SOFTWARE.
                 <argument>-c</argument>
                 <argument>rm -f ${project.build.directory}/work/webapp/WEB-INF/lib/log4j-1.2.*.jar</argument>
               </arguments>
-            </configuration>                                               
-          </execution>          
-        </executions>    
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
